[package]
name = "aprs-parser"
version = "0.2.0"
authors = ["Tobias Bieniek <tobias.bieniek@gmail.com>"]
edition = "2021"
description = "APRS message parser for Rust"
readme = "README.md"
keywords = ["aprs", "parser", "ogn"]
homepage = "https://github.com/Turbo87/aprs-parser-rs/"
repository = "https://github.com/Turbo87/aprs-parser-rs.git"
license = "MIT/Apache-2.0"
exclude = [".gitignore", ".travis.yml"]

[dependencies]
thiserror = "1.0.39"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
approx = "0.5.1"
csv = "1.0"
