[package]
name = "aprs-parser"
version = "0.3.0"
authors = ["Tobias Bieniek <tobias.bieniek@gmail.com>"]
edition = "2024"
description = "APRS message parser for Rust"
readme = "README.md"
keywords = ["aprs", "parser", "ogn"]
homepage = "https://github.com/Turbo87/aprs-parser-rs/"
repository = "https://github.com/Turbo87/aprs-parser-rs.git"
license = "MIT/Apache-2.0"
exclude = [".gitignore"]

[dependencies]
thiserror = "1.0.61"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
approx = "0.5.1"
csv = "1.3.0"
