[package]
name = "ogn-parser"
version = "0.3.0"
authors = ["Tobias Bieniek <tobias.bieniek@gmail.com>", "Konstantin Gründger <konstantin.gruendger@gmail.com>"]
edition = "2024"
description = "OGN message parser for Rust - fork of aprs-parser-rs"
readme = "README.md"
keywords = ["aprs", "parser", "ogn"]
homepage = "https://github.com/Meisterschueler/ogn-parser-rs/"
repository = "https://github.com/Meisterschueler/ogn-parser-rs.git"
license = "MIT/Apache-2.0"
exclude = [".gitignore"]

[dependencies]
thiserror = "1.0.61"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
approx = "0.5.1"
csv = "1.3.0"
