[package]
name = "ogn-parser-pyo3"
version = "0.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ogn_parser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.1"
rayon = "1.10.0"
serde_json = "1.0"
ogn-parser = { path = "../core" }
pythonize = "0.24.0"
